test/tests/stages/9_functions/valid/no_arguments/multiple_declarations.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CFunDecl: 
                CFunctionDeclaration: 
                  TIdentifier: f
                  List[0]: 
                  None: 
                  FunType: 
                    TULong: 67108864
                    TULong: 67108864
                    List[0]: 
                    Int: 
                  None: 
            CD: 
              CFunDecl: 
                CFunctionDeclaration: 
                  TIdentifier: f
                  List[0]: 
                  None: 
                  FunType: 
                    TULong: 67108864
                    TULong: 67108864
                    List[0]: 
                    Int: 
                  None: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: f
                  List[0]: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: f
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 3
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
