test/tests/stages/9_functions/invalid_declarations/nested_function_definition.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CFunDecl: 
                CFunctionDeclaration: 
                  TIdentifier: foo
                  List[0]: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                  FunType: 
                    TULong: 67108864
                    TULong: 67108864
                    List[0]: 
                    Int: 
                  None: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: foo
                  List[0]: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
